--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -20,4 +20,7 @@ jobs:
         with:
           go-version: 1.22
         id: go
-      - run: bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh beta
+      - name: Build binaries
+        run: |
+          go mod tidy && go mod vendor
+          bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh beta
