--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,9 @@ jobs:
           go-version: 1.22
         id: go
       - name: Build Binaries
-        run: bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh
+        run: |
+          go mod tidy && go mod vendor
+          bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
