--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -25,11 +25,19 @@ jobs:
           go mod tidy && go mod vendor
           bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh beta
 
-      - name: Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+      
+      - name: Create a Release
+        uses: elgohr/Github-Release-Action@v5
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "latest-beta"
-          prerelease: true
-          title: "Development Build"
-          files: dist/*
+          title: Development Build
+
+      #- name: Release
+      #  uses: "marvinpinto/action-automatic-releases@latest"
+      #  with:
+      #    repo_token: "${{ secrets.GITHUB_TOKEN }}"
+      #    automatic_release_tag: "latest-beta"
+      #    prerelease: true
+      #    title: "Development Build"
+      #    files: dist/*
