--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,19 +26,17 @@ jobs:
           go mod tidy && go mod vendor
           bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker Build Setup
-        uses: docker/setup-buildx-action@v2
-        with:
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-
       - name: Docker Build and Push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
@@ -47,7 +45,7 @@ jobs:
           tags: mgoerentz/threadfin:latest,mgoerentz/threadfin:${{  github.ref_name }}
 
       - name: Docker Nvidia Build and Push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           build-args: NVIDIA=1
@@ -56,9 +54,11 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           tags: mgoerentz/threadfin:latest-nvidia,mgoerentz/threadfin:${{  github.ref_name }}-nvidia
 
-      - name: Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+
+      - name: Create a Release
+        uses: softprops/action-gh-release@v2
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
-          files: dist/*
+          token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: true
+          name: Development Build
+          tag_name: latest-beta
