--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -11,16 +11,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: beta
 
       - name: Set up and Build
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.18
+          go-version: 1.22
         id: go
-      - run: |
-         go mod tidy && go mod vendor
-         echo "Building Linux"
-         env GOOS=linux GOARCH=amd64 go build -o dist/Threadfin_linux_amd64
+      - name: Build binaries
+        run: |
+          go mod tidy && go mod vendor
+          bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh beta
+
+      
+      - name: Create a Release
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          prerelease: true
+          name: Development Build
+          tag_name: latest-beta
