--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-    tags: "1.*"
+    tags: "v*"
 permissions:
   contents: write
 jobs:
@@ -12,63 +12,51 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           ref: main
 
       - name: Set up and Build
-        uses: actions/setup-go@v5
+        uses: actions/setup-go@v4
         with:
-          go-version: '>=1.18'
+          go-version: 1.22
         id: go
       - name: Build Binaries
         run: |
-         go mod tidy && go mod vendor
-         echo "Building Linux"
-         env GOOS=linux GOARCH=arm64 go build -o dist/Threadfin_linux_arm64
-         env GOOS=linux GOARCH=amd64 go build -o dist/Threadfin_linux_amd64
-         echo "Building FreeBSD"
-         env GOOS=freebsd GOARCH=amd64 go build -o dist/Threadfin_freebsd_amd64
-         env GOOS=freebsd GOARCH=arm go build -o dist/Threadfin_freebsd_arm
-         echo "Building Macos"
-         env GOOS=darwin GOARCH=arm64 go build -o dist/Threadfin_darwin_arm64
-         env GOOS=darwin GOARCH=amd64 go build -o dist/Threadfin_darwin_amd64
-         echo "Building Windows"
-         env GOOS=windows GOARCH=amd64 go build -o dist/Threadfin_windows_amd64.exe
+          go mod tidy && go mod vendor
+          bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker Build Setup
-        uses: docker/setup-buildx-action@v2
-        with:
-          platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-
       - name: Docker Build and Push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: fyb3roptik/threadfin:latest,fyb3roptik/threadfin:${{  github.ref_name }}
+          tags: mgoerentz/threadfin:latest,mgoerentz/threadfin:${{  github.ref_name }}
 
       - name: Docker Nvidia Build and Push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
           context: .
           build-args: NVIDIA=1
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: fyb3roptik/threadfin:latest-nvidia,fyb3roptik/threadfin:${{  github.ref_name }}-nvidia
+          tags: mgoerentz/threadfin:latest-nvidia,mgoerentz/threadfin:${{  github.ref_name }}-nvidia
 
-      - name: Release
-        uses: "marvinpinto/action-automatic-releases@latest"
+
+      - name: Create a Release
+        uses: softprops/action-gh-release@v2
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          prerelease: false
           files: dist/*
