--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,16 @@
 name: Threadfin Build
 on:
   push:
-    branches:
-      - main
     tags: 
       - 'v*'
+
 permissions:
   contents: write
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
