--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -6,8 +6,8 @@ on:
 permissions:
   contents: write
 jobs:
-  build:
-    name: Build
+  buildBinaries:
+    name: Build and release binaries
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
@@ -34,7 +34,11 @@ jobs:
           name: Development Build
           tag_name: latest-beta
           files: dist/*
-
+  
+  buildDockerImages:
+    name: Build and push Docker images
+    runs-on: ubuntu-latest
+    steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -48,6 +52,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          build-args: BRANCH=beta
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
@@ -57,7 +62,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          build-args: NVIDIA=1
+          build-args: |
+            "NVIDIA=1"
+            "BRANCH=beta"
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
