Update Dockerfile and yml files accordingly

--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           context: .
           build-args: |
-            "NVIDIA=1"
+            "IMAGE=nvidia/cuda:12.5.0-base-ubuntu22.04"
             "BRANCH=beta"
           push: true
           no-cache: true
