--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,6 @@ jobs:
   buildBinaries:
     name: Build and release binaries
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
@@ -38,8 +37,10 @@ jobs:
   buildDockerImages:
     name: Build and push Docker Images
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
