--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,15 +11,17 @@
 			"label": "tsc build"
 		},
 		{
-			"type": "go",
-			"command": "build",
-			"label": "go build"
-		},
-		{
-			"label": "Build",
-			"dependsOn" : [
-				"tsc build",
-				"go build"
+			"label": "Build debug version",
+			"type": "shell",
+			"windows":{
+				"command": "go",
+				"args": [
+					"build",
+					"-gcflags=all='-N -l'"
+				]
+			},
+			"dependsOn" :[
+				"tsc build"
 			]
 		}
 	]
