--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,4 +57,6 @@ jobs:
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: mgoerentz/threadfin:latest,mgoerentz/threadfin:${{  github.ref_name }}
+          tags: |
+            mgoerentz/threadfin:latest
+            mgoerentz/threadfin:${{  github.ref_name }}
