--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -61,4 +61,5 @@ jobs:
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: mgoerentz/threadfin:${{  github.ref_name }}
+          tags: |
+            mgoerentz/threadfin:${{  github.ref_name }}
