--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,4 +57,10 @@ jobs:
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: mgoerentz/threadfin:latest,mgoerentz/threadfin:${{  github.ref_name }}
+          tags: mgoerentz/threadfin:latest,mgoerentz/threadfin:${{  github.ref_name }},ghcr.io/marcelGoerentz/threadfin:latest,ghcr.io/marcelGoerentz/threadfin:${{  github.ref_name }}
+      - name: Push image to GHCR
+        run: |
+          docker buildx imagetools create \
+            --tag ghcr.io/marcelGoerentz/threadfin:latest \
+            --tag ghcr.io/marcelGoerentz/threadfin:${{  github.ref_name }} \
+            mgoerentz/threadfin:${{  github.ref_name }}
