--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -50,6 +50,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Login to Github Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Docker Build and Push
         uses: docker/build-push-action@v5
         with:
@@ -57,10 +64,9 @@ jobs:
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: mgoerentz/threadfin:latest,mgoerentz/threadfin:${{  github.ref_name }},ghcr.io/marcelGoerentz/threadfin:latest,ghcr.io/marcelGoerentz/threadfin:${{  github.ref_name }}
-      - name: Push image to GHCR
-        run: |
-          docker buildx imagetools create \
-            --tag ghcr.io/marcelgoerentz/threadfin:latest \
-            --tag ghcr.io/marcelgoerentz/threadfin:${{  github.ref_name }} \
+          tags: |
+            mgoerentz/threadfin:latest
             mgoerentz/threadfin:${{  github.ref_name }}
+            ghcr.io/marcelGoerentz/threadfin:latest
+            ghcr.io/marcelGoerentz/threadfin:${{  github.ref_name }}
+
