--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -53,6 +53,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Login to Github Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Docker Build and Push
         uses: docker/build-push-action@v5
         with:
@@ -61,4 +68,6 @@ jobs:
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
-          tags: mgoerentz/threadfin:${{  github.ref_name }}
+          tags: |
+            mgoerentz/threadfin:${{  github.ref_name }}
+            ghcr.io/marcelgoerentz/threadfin:${{  github.ref_name }}
