--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,6 +67,11 @@ jobs:
           tags: |
             mgoerentz/threadfin:latest
             mgoerentz/threadfin:${{  github.ref_name }}
-            ghcr.io/marcelgoerentz/threadfin:latest
-            ghcr.io/marcelgoerentz/threadfin:${{  github.ref_name }}
+
+      - name: Push image to GHCR
+        run: |
+          docker buildx imagetools create \
+            --tag ghcr.io/marcelgoerentz/threadfin:latest \
+            --tag ghcr.io/marcelgoerentz/threadfin:${{ github.ref_name }} \
+            mgoerentz/threadfin:latest 
 
