Testing new release and beta style
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -16,10 +16,13 @@ jobs:
         with:
           ref: beta
 
-      - name: Delete release and Tag
-        run: gh release --cleanup-tag --yes delete latest-beta
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set build number
+        run: |
+          bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${vars.BUILD_NUMBER}
+  
+      - name: Update repo variable
+        run: |
+          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh
 
       - name: Set up and Build
         uses: actions/setup-go@v5
@@ -61,7 +64,9 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          build-args: BRANCH=beta
+          build-args: |
+            BRANCH=beta
+            VERSION=${{ env.NEW_VERSION }}
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
