--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,14 @@ jobs:
         with:
           ref: main
 
+      - name: Set build number
+        run: |
+          bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${vars.BUILD_NUMBER}
+
+      - name: Update repo variable
+        run: |
+          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh
+
       - name: Set up and Build
         uses: actions/setup-go@v5
         with:
@@ -56,6 +64,8 @@ jobs:
           context: .
           push: true
           no-cache: true
+          build-args: |
+            VERSION=${{ env.NEW_VERSION }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           tags: |
             mgoerentz/threadfin:latest
