--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -19,8 +19,10 @@ jobs:
       - name: Set build number
         run: |
           bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }}
-  
-      - name: Update repo variable
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPOSITORY: ${{ github.repository }}
+          NEW_BUILD: ${{ env.NEW_BUILD }}
         run: |
           bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh
 
