--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -19,6 +19,8 @@ jobs:
       - name: Set build number
         run: |
           bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }}
+
+      - name: Update repo variable
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: ${{ github.repository }}
