Do some minor changes
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -40,8 +40,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
-          name: ${{ env.NEW_VERSION }} (Beta)
-          tag_name: ${{ env.NEW_VERSION }}
+          name: v${{ env.NEW_VERSION }} (Beta)
+          tag_name: v${{ env.NEW_VERSION }}
           files: dist/*
   
   buildDockerImages:
