Update development branch
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,12 +21,8 @@ jobs:
           bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }}
 
       - name: Update repo variable
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPOSITORY: ${{ github.repository }}
-          NEW_BUILD: ${{ env.NEW_BUILD }}
         run: |
-          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh
+          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh ${{ secrets.API_TOKEN }} ${{ github.repository }} ${{ env.NEW_BUILD }}
 
       - name: Set up and Build
         uses: actions/setup-go@v5
