--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -19,14 +19,10 @@ jobs:
       - name: Set build number
         run: |
           bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }}
-  
+
       - name: Update repo variable
-        env: 
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          REPOSITORY: ${{ github.repository }}
-          NEW_BUILD: ${{ env.NEW_BUILD }}
         run: |
-          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh
+          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh ${{ secrets.API_TOKEN }} ${{ github.repository }} ${{ env.NEW_BUILD }}
 
       - name: Set up and Build
         uses: actions/setup-go@v5
@@ -44,8 +40,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
-          name: ${{ env.NEW_VERSION }} (Beta)
-          tag_name: ${{ env.NEW_VERSION }}
+          name: v${{ env.NEW_VERSION }} (Beta)
+          tag_name: v${{ env.NEW_VERSION }}-beta
           files: dist/*
   
   buildDockerImages:
@@ -75,4 +71,4 @@ jobs:
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           tags: |
-            mgoerentz/threadfin:${{  github.ref_name }}
+            mgoerentz/threadfin:${{  github.ref_name }}-beta
