Now the correct tag will be produced for a beta release
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -71,4 +71,4 @@ jobs:
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           tags: |
-            mgoerentz/threadfin:${{  github.ref_name }}-beta
+            mgoerentz/threadfin:${{  env.NEW_VERSION }}-beta
