--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -47,6 +47,7 @@ jobs:
   buildDockerImages:
     name: Build and push Docker images
     runs-on: ubuntu-latest
+    needs: buildBinaries
     steps:
       - name: Checkout
         uses: actions/checkout@v4
