--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -10,6 +10,8 @@ jobs:
   buildBinaries:
     name: Build and release binaries
     runs-on: ubuntu-latest
+    outputs:
+      new_version: ${{ steps.set-build-number.outputs.new_version }}
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
@@ -17,9 +19,10 @@ jobs:
           ref: beta
 
       - name: Set build number
+        id: set-build-number
         run: |
-          bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }}
-          echo "::set-output name=new_version::$new_version"
+          new_version=$(bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }})
+          echo "new_version=$new_version" >> $GITHUB_ENV
 
       - name: Update repo variable
         run: |
@@ -41,8 +44,8 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           prerelease: true
-          name: v${{ env.NEW_VERSION }} (Beta)
-          tag_name: v${{ env.NEW_VERSION }}-beta
+          name: v${{ steps.set-build-number.outputs.new_version }} (Beta)
+          tag_name: v${{ steps.set-build-number.outputs.new_version }}-beta
           files: dist/*
   
   buildDockerImages:
@@ -54,7 +57,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set NEW_VERSION
-        run: echo "NEW_BUILD=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
+        run: echo "NEW_VERSION=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
