--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           new_version=$(bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }})
           echo "new_version=${new_version}" >> $GITHUB_ENV
-          echo "::set-output name=new_version::${new_version}"
+          echo "new_version=${new_version}" >> $GITHUB_OUTPUT
 
       - name: Update repo variable
         run: |
@@ -59,6 +59,7 @@ jobs:
 
       - name: Set NEW_VERSION
         run: echo "NEW_VERSION=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
+        shell: bash
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
