--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Threadfin Build
 on:
   push:
-    tags: 
-      - 'v*'
+    branches: 
+      - master
 
 permissions:
   contents: write
@@ -10,6 +10,8 @@ jobs:
   buildBinaries:
     name: Build and release binaries
     runs-on: ubuntu-latest
+    outputs:
+      new_version: ${{ steps.set-build-number.outputs.new_version }}
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
@@ -17,12 +19,13 @@ jobs:
           ref: main
 
       - name: Set build number
+        id: set-build-number
         run: |
-          bash ${GITHUB_WORKSPACE}/Utility/set_buildnumber.sh ${{ vars.BUILD_NUMBER }}
+          bash ${GITHUB_WORKSPACE}/Utility/set_build_number.sh ${{ vars.BUILD_NUMBER }}
 
       - name: Update repo variable
         run: |
-          bash ${GITHUB_WORKSPACE}/Utility/update_buildnumber_variable.sh ${{ secrets.API_TOKEN }} ${{ github.repository }} ${{ env.NEW_BUILD }}
+          bash ${GITHUB_WORKSPACE}/Utility/update_build_number_variable.sh ${{ secrets.API_TOKEN }} ${{ github.repository }} ${{ env.NEW_BUILD }}
 
       - name: Set up and Build
         uses: actions/setup-go@v5
@@ -45,9 +48,14 @@ jobs:
   buildDockerImages:
     name: Build and push Docker Images
     runs-on: ubuntu-latest
+    needs: buildBinaries
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set NEW_VERSION
+        run: echo "NEW_VERSION=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
+        shell: bash
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -69,4 +77,4 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           tags: |
             mgoerentz/threadfin:latest
-            mgoerentz/threadfin:${{  github.ref_name }}
+            mgoerentz/threadfin:v${{ env.NEW_VERSION }}
