Move frontend code to the web folder
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -4,10 +4,10 @@
     "lib": ["es6", "dom", "dom.iterable", "es2017"],
     "target": "es6",
     "sourceMap": true,
-    "outDir": "../html/js"
+    "outDir": "public/js"
   },
   "include": [
-    "*.ts"
+    "src/ts/*.ts"
   ],
   "exclude": [
     "node_modules"
