--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -4,12 +4,12 @@ on:
     branches:
       - beta
 
-permissions:
-  contents: write
 jobs:
   buildBinaries:
     name: Build and release binaries
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       new_version: ${{ steps.set-build-number.outputs.new_version }}
     steps:
@@ -29,8 +29,8 @@ jobs:
 
       - name: Build webUI
         run: |
-          tsc -p ./web/tsconfig.json
-          python ./Utility/create_new_webUI.py
+          tsc -p  ${GITHUB_WORKSPACE}/web/tsconfig.json
+          python  ${GITHUB_WORKSPACE}/Utility/create_new_webUI.py
 
       - name: Upload webUI as artifact
         uses: actions/upload-artifact@v4
@@ -69,6 +69,12 @@ jobs:
       - name: Set NEW_VERSION
         run: echo "NEW_VERSION=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
         shell: bash
+
+      - name: Download webUI artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: webUI-artifact
+          path: ./src
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -84,7 +90,8 @@ jobs:
         with:
           context: .
           build-args: |
-            BRANCH=beta
+            BUILD_FLAG=beta
+            VERSION=${{ env.NEW_VERSION }}
           push: true
           no-cache: true
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
