--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -4,12 +4,12 @@ on:
     branches:
       - beta
 
-permissions:
-  contents: write
 jobs:
   buildBinaries:
     name: Build and release binaries
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       new_version: ${{ steps.set-build-number.outputs.new_version }}
     steps:
@@ -26,6 +26,17 @@ jobs:
       - name: Update repo variable
         run: |
           bash ${GITHUB_WORKSPACE}/Utility/update_build_number_variable.sh ${{ secrets.API_TOKEN }} ${{ github.repository }} ${{ env.NEW_BUILD }}
+
+      - name: Build webUI
+        run: |
+          tsc -p  ${GITHUB_WORKSPACE}/web/tsconfig.json
+          python  ${GITHUB_WORKSPACE}/Utility/create_new_webUI.py
+
+      - name: Upload webUI as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: webUI-artifact
+          path: ./src/webUI.go
 
       - name: Set up and Build
         uses: actions/setup-go@v5
@@ -58,6 +69,12 @@ jobs:
       - name: Set NEW_VERSION
         run: echo "NEW_VERSION=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
         shell: bash
+
+      - name: Download webUI artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: webUI-artifact
+          path: ./src
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -73,7 +90,7 @@ jobs:
         with:
           context: .
           build-args: |
-            BRANCH=beta
+            BUILD_FLAG=beta
             VERSION=${{ env.NEW_VERSION }}
           push: true
           no-cache: true
