--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,19 +4,19 @@ on:
     branches: 
       - master
 
-permissions:
-  contents: write
 jobs:
   buildBinaries:
     name: Build and release binaries
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       new_version: ${{ steps.set-build-number.outputs.new_version }}
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: maser
 
       - name: Set build number
         id: set-build-number
@@ -27,17 +27,28 @@ jobs:
         run: |
           bash ${GITHUB_WORKSPACE}/Utility/update_build_number_variable.sh ${{ secrets.API_TOKEN }} ${{ github.repository }} ${{ env.NEW_BUILD }}
 
+      - name: Build webUI
+        run: |
+          tsc -p  ${GITHUB_WORKSPACE}/web/tsconfig.json
+          python  ${GITHUB_WORKSPACE}/Utility/create_new_webUI.py
+
+      - name: Upload webUI as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: webUI-artifact
+          path: ./src/webUI.go
+
       - name: Set up and Build
         uses: actions/setup-go@v5
         with:
           go-version: 1.23
         id: go
-      
-      - name: Build Binaries
+
+      - name: Build binaries
         run: |
           go mod tidy && go mod vendor
           bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh
-      
+
       - name: Create a Release
         uses: softprops/action-gh-release@v2
         with:
@@ -48,7 +59,7 @@ jobs:
           make_latest: true
 
   buildDockerImages:
-    name: Build and push Docker Images
+    name: Build and push Docker images
     runs-on: ubuntu-latest
     needs: buildBinaries
     steps:
@@ -59,6 +70,12 @@ jobs:
         run: echo "NEW_VERSION=${{ needs.buildBinaries.outputs.new_version }}" >> $GITHUB_ENV
         shell: bash
 
+      - name: Download webUI artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: webUI-artifact
+          path: ./src
+      
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -69,13 +86,11 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Docker Build and Push
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           push: true
           no-cache: true
-          build-args: |
-            VERSION=${{ env.NEW_VERSION }}
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v8
           tags: |
             mgoerentz/threadfin:latest
